--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Analyze
         shell: bash
         run: |
-          vendor/bin/phpcs
-          vendor/bin/phpstan analyse --no-interaction --no-ansi
+          vendor/bin/phpcs app/ tests/
+          vendor/bin/phpstan analyse --no-interaction --no-ansi app/ tests/
   Test:
     runs-on: ubuntu-latest
     steps:
