[GBLIE-3] add matrix

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,27 +1,37 @@
-name: Tests-Analyse
+name: Test
 
 on:
+  push:
+    branches: [main]
   pull_request:
   workflow_dispatch:
-
 jobs:
-  Analyze:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: jauntin/actions/setup-php-testing@v1
-      - name: Run code analysis
-        shell: bash
-        run: |
-          vendor/bin/phpstan analyse -l 6 --no-interaction --no-ansi src tests
-  Test:
+  analyze:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: jauntin/actions/setup-php-testing@v1
         with:
           php-version: 8.1
-      - name: Run tests
-        shell: bash
-        run: |
-          vendor/bin/phpunit
+      - run: composer analyze
+  test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: true
+      matrix:
+        os: [ubuntu-latest]
+        php: [8.1]
+        stability: [prefer-lowest, prefer-stable]
+        laravel:
+          - ^9.0
+          - ^10.0
+    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: jauntin/actions/setup-php-testing@v1
+        with:
+          php-version: ${{ matrix.php }}
+      - run: |
+          composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --no-update
+          composer update --${{ matrix.stability }} --prefer-dist --no-interaction
+      - run: vendor/bin/phpunit --coverage-text
