--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         "illuminate/support": "^10.0"
     },
     "require-dev": {
+        "nunomaduro/larastan": "^2.6",
         "orchestra/testbench": "^8.5",
-        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.0",
         "squizlabs/php_codesniffer": "^3.7"
     },
