Adds pint with PSR12

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Run code analysis
         shell: bash
         run: |
-          vendor/bin/phpcs
+          vendor/bin/pint --test
           vendor/bin/phpstan analyse --no-interaction --no-ansi
   Test:
     runs-on: ${{ matrix.os }}
