--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,10 @@
         "illuminate/support": "^10.0"
     },
     "require-dev": {
+        "laravel/pint": "^1.10",
         "nunomaduro/larastan": "^2.6",
         "orchestra/testbench": "^8.5",
-        "phpunit/phpunit": "^10.0",
-        "squizlabs/php_codesniffer": "^3.7"
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
