--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^8.1",
+        "doctrine/dbal": "^3.6",
         "illuminate/database": "^10.0",
         "illuminate/http": "^10.0",
         "illuminate/routing": "^10.0",
