--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,37 +1,30 @@
 name: Test
-
 on:
   push:
     branches: [main]
   pull_request:
   workflow_dispatch:
 jobs:
-  Analyze:
-    runs-on: ubuntu-latest
+  Lint:
+    runs-on: arc-runner-set
+    container:
+      image: ghcr.io/jauntin/php-test-image:8.1
     steps:
-      - uses: actions/checkout@v3
-      - uses: jauntin/actions/setup-php-testing@v1
-      - name: Run code analysis
-        shell: bash
-        run: |
-          vendor/bin/pint --test
-          vendor/bin/phpstan analyse --no-interaction --no-ansi
+      - uses: actions/checkout@v4
+      - run: composer install
+      - run: "parallel ::: 'vendor/bin/pint --test' 'vendor/bin/phpstan --no-interaction --no-ansi'"
   Test:
-    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest]
-        php: [8.1]
         stability: [prefer-lowest, prefer-stable]
-        laravel:
-          - ^10.0
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
+        laravel: [^10.0]
+    runs-on: arc-runner-set
+    name: L${{ matrix.laravel }} - ${{ matrix.stability }}
+    container:
+      image: ghcr.io/jauntin/php-test-image:8.1
     steps:
-      - uses: actions/checkout@v3
-      - uses: jauntin/actions/setup-php-testing@v1
-        with:
-          php-version: ${{ matrix.php }}
+      - uses: actions/checkout@v4
       - run: |
           composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
