--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
         "illuminate/support": "^10.0"
     },
     "require-dev": {
-        "laravel/pint": "^1.10",
-        "nunomaduro/larastan": "^2.6",
-        "orchestra/testbench": "^8.5",
-        "phpunit/phpunit": "^10.0"
+        "laravel/pint": "^1.16",
+        "larastan/larastan": "^2.9.7",
+        "orchestra/testbench": "^8.23.2",
+        "phpunit/phpunit": "^10.5.20"
     },
     "autoload": {
         "psr-4": {
