--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": ">=8.1 <8.4",
         "doctrine/dbal": "^3.6",
         "illuminate/database": "^10.0",
         "illuminate/http": "^10.0",
