--- a/composer.json
+++ b/composer.json
@@ -1,52 +1,48 @@
 {
-    "name": "jauntin/saving-quote",
-    "description": "Laravel package for saving user quote",
-    "keywords": [
-        "jauntin",
-        "saving-quote"
-    ],
-    "homepage": "https://github.com/jauntin/saving-quote",
-    "license": "MIT",
-    "type": "library",
-    "authors": [
-        {
-            "name": "Daryna Syvyuk",
-            "email": "daryna@jauntin.com",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php": ">=8.1 <8.4",
-        "doctrine/dbal": "^3.6",
-        "illuminate/database": "^10.0",
-        "illuminate/http": "^10.0",
-        "illuminate/routing": "^10.0",
-        "illuminate/support": "^10.0"
-    },
-    "require-dev": {
-        "laravel/pint": "^1.16",
-        "larastan/larastan": "^2.9.7",
-        "orchestra/testbench": "^8.23.2",
-        "phpunit/phpunit": "^10.5.20"
-    },
-    "autoload": {
-        "psr-4": {
-            "Jauntin\\SavingQuote\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "config": {
-        "sort-packages": true
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Jauntin\\SavingQuote\\SavingQuoteServiceProvider"
-            ]
-        }
+  "name": "jauntin/saving-quote",
+  "description": "Laravel package for saving user quote",
+  "license": "MIT",
+  "type": "library",
+  "keywords": [
+    "jauntin",
+    "saving-quote"
+  ],
+  "authors": [
+    {
+      "name": "Daryna Syvyuk",
+      "email": "daryna@jauntin.com",
+      "role": "Developer"
     }
+  ],
+  "homepage": "https://github.com/jauntin/saving-quote",
+  "require": {
+    "php": ">=8.3 <8.4",
+    "laravel/framework": "^10.0 || ^11.0 || ^12.0"
+  },
+  "require-dev": {
+    "larastan/larastan": "^2.9.7 || ^3.2",
+    "laravel/pint": "^1.21.2",
+    "orchestra/testbench": "^8.23.2 || ^9.0 || ^10.1",
+    "phpunit/phpunit": "^10.5.20 || ^11.5.15"
+  },
+  "autoload": {
+    "psr-4": {
+      "Jauntin\\SavingQuote\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Jauntin\\SavingQuote\\SavingQuoteServiceProvider"
+      ]
+    }
+  }
 }
