--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "laravel/framework": "^10.0 || ^11.0 || ^12.0"
   },
   "require-dev": {
+    "doctrine/dbal": "^3.6",
     "larastan/larastan": "^2.9.7 || ^3.2",
     "laravel/pint": "^1.21.2",
     "orchestra/testbench": "^8.23.2 || ^9.0 || ^10.1",
